<resources>
    <string name="app_name">Demo29</string>
    <string name="agree_protocol">登录或者注册即同意到处旅行用户协议</string>
    <string name="for_more_service">你好,为了获取更好的服务</string>
    <string name="login_app">请登录到处旅行</string>
    <string name="contry_code">+86</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="send_verify">发送验证码</string>
    <string name="or">or</string>
    <string name="send_again">重新发送</string>
    <string name="input_verify">请输入验证码</string>
    <string name="wait_please">请稍后...</string>
    <string name="app_qqlogin">三方登陆</string>
    <string name="verify_code">验证码:</string>
    <string name="get_verify_fail">获取验证码失败</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="app_my_purse">我的钱包</string>
    <string name="app_experience">立即体验</string>
    <string name="app_money">元</string>
    <string name="app_win_prize">赢取奖金</string>
    <string name="me_kaquan">我的卡券</string>
    <string name="me_yigou">已购行程</string>
    <string name="me_shoucang">我的收藏</string>
    <string name="me_guanzh">我的关注</string>
    <string name="app_miss">林小姐</string>
    <string name="app_body">四体不勤五谷不分</string>
    <string name="about">关于</string>
    <string name="app_pim">个人信息</string>
    <string name="app_get_path">获取途径</string>
    <string name="app_redact">编辑</string>
    <string name="app_kefu">联系客服</string>
    <string name="app_fankui">意见反馈</string>
    <string name="app_banben">版本检测</string>
</resources>
