<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        android:scaleType="fitXY"
        android:id="@+id/images"
        android:src="@mipmap/zhanweitu_home_kapian"
        android:background="@drawable/bg_yx"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_me_bianji"
        android:layout_marginLeft="@dimen/dp_239"
        android:layout_marginTop="@dimen/dp_50"/>

    <TextView
        android:id="@+id/bianji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_redact"
        android:layout_marginLeft="@dimen/dp_259"
        android:layout_marginTop="@dimen/dp_45"
        android:textColor="@color/c_fa6a13"
        android:textSize="@dimen/dp_14"/>
    <TextView
        android:layout_width="@dimen/dp_66"
        android:layout_height="@dimen/sp_30"
        android:text="@string/app_miss"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dp_149"
        android:id="@+id/tv_name"
        android:textSize="22sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_marginLeft="@dimen/dp_95"
        android:text="@string/app_body"
        android:textSize="12sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/iv_im"
        android:layout_width="@dimen/dp_288"
        android:layout_height="@dimen/dp_122"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_145"
        android:background="@drawable/gra_fa6a13_de"/>
    <TextView
        android:layout_width="@dimen/dp_56"
        android:layout_height="@dimen/dp_17"
        android:text="@string/app_my_purse"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_153"
        android:layout_marginLeft="@dimen/dp_20"
        android:textSize="@dimen/dp_14"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="99"
        android:layout_marginTop="@dimen/dp_174"
        android:layout_marginLeft="@dimen/dp_111"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_58"/>
    <TextView
        android:layout_width="@dimen/dp_14"
        android:layout_height="@dimen/dp_17"
        android:text="@string/app_money"
        android:textSize="@dimen/dp_14"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_205"
        android:layout_marginLeft="@dimen/dp_184"/>
    <TextView
        android:layout_width="@dimen/dp_56"
        android:layout_height="@dimen/dp_17"
        android:text="@string/app_win_prize"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/dp_239"
        android:layout_marginLeft="@dimen/dp_208"/>
    <ImageView
        android:layout_width="@dimen/dp_6"
        android:layout_height="@dimen/dp_11"
        android:src="@drawable/big_arrow_right"
        android:layout_marginTop="@dimen/dp_244"
        android:layout_marginLeft="@dimen/dp_270"/>
    <ImageView
        android:layout_width="@dimen/dp_6"
        android:layout_height="@dimen/dp_11"
        android:src="@drawable/big_arrow_right"
        android:layout_marginTop="@dimen/dp_244"
        android:layout_marginLeft="@dimen/dp_277"/>


        <android.support.v7.widget.CardView
            android:layout_marginTop="@dimen/dp_300"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
                android:layout_width="@dimen/dp_288"
                android:layout_height="@dimen/dp_180"
                app:cardBackgroundColor="#ffffff"
                app:cardCornerRadius="15dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_me_kaquan" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/me_kaquan"
                        android:layout_marginLeft="@dimen/dp_50"
                        android:textSize="@dimen/dp_14"
                        android:textColor="@color/c_333333"
                        />
                    <ImageView
                        android:src="@drawable/right_arrow"
                        android:layout_width="@dimen/dp_10"
                        android:layout_height="@dimen/dp_20"
                        android:layout_marginLeft="@dimen/dp_100" />
                </LinearLayout>
                <View
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_width="@dimen/dp_268"
                    android:layout_height="@dimen/dp_2"
                    android:background="@color/c_eaeaea"/>
                <LinearLayout
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_me_yigou" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/me_yigou"
                        android:layout_marginLeft="@dimen/dp_50"
                        android:textSize="@dimen/dp_14"
                        android:textColor="@color/c_333333"
                        />
                    <ImageView
                        android:src="@drawable/right_arrow"
                        android:layout_width="@dimen/dp_10"
                        android:layout_height="@dimen/dp_20"
                        android:layout_marginLeft="@dimen/dp_100" />
                </LinearLayout>
                <View
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_width="@dimen/dp_268"
                    android:layout_height="@dimen/dp_2"
                    android:background="@color/c_eaeaea"/>
                <LinearLayout
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_me_shoucang" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/me_shoucang"
                        android:layout_marginLeft="@dimen/dp_50"
                        android:textSize="@dimen/dp_14"
                        android:textColor="@color/c_333333"
                        />
                    <ImageView
                        android:src="@drawable/right_arrow"
                        android:layout_width="@dimen/dp_10"
                        android:layout_height="@dimen/dp_20"
                        android:layout_marginLeft="@dimen/dp_100" />
                </LinearLayout>
                <View
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_width="@dimen/dp_268"
                    android:layout_height="@dimen/dp_2"
                    android:background="@color/c_eaeaea"/>
                <LinearLayout
                    android:layout_marginTop="@dimen/dp_10"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_me_guanzhu" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/me_guanzh"
                        android:layout_marginLeft="@dimen/dp_50"
                        android:textSize="@dimen/dp_14"
                        android:textColor="@color/c_333333"
                        />
                    <ImageView
                        android:src="@drawable/right_arrow"
                        android:layout_width="@dimen/dp_10"
                        android:layout_height="@dimen/dp_20"
                        android:layout_marginLeft="@dimen/dp_100" />
                </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_me_kefu"
        android:layout_marginTop="@dimen/dp_500"
        android:layout_marginLeft="@dimen/dp_16"/>
    <TextView
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_500"
        android:text="@string/app_kefu"
        android:layout_marginLeft="@dimen/dp_41"/>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_me_fankui"
        android:layout_marginTop="@dimen/dp_500"
        android:layout_marginLeft="@dimen/dp_109" />
    <TextView
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_fankui"
        android:layout_marginTop="@dimen/dp_500"
        android:layout_marginLeft="@dimen/dp_130"/>
    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_me_banben"
        android:layout_marginTop="@dimen/dp_500"
        android:layout_marginLeft="@dimen/dp_208" />
    <TextView
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_banben"
        android:layout_marginTop="@dimen/dp_500"
        android:layout_marginLeft="@dimen/dp_230"/>
</RelativeLayout>